use label for answer and status